# mesh-vpn-portal

./: .gitignore  Cargo.toml  Makefile  client.rest  cookies.txt  package-lock.json  verify_ws.js  verify_ws.py
src/: main.rs  state.rs  utils.rs
src/api/: admin.rs  auth.rs  health.rs  htmx.rs  middleware.rs  mod.rs  wakatime.rs  websocket.rs
src/domain/: logger.rs  mod.rs  repositories.rs
src/infrastructure/: file_logger.rs
src/repositories/: log_repository.rs  mod.rs
src/services/: log_service.rs  mod.rs  wakatime.rs
static/: dashboard.html
templates/: dashboard.html  dashboard.htmx  layout.html  layout.htmx  logged_out.html  logged_out.htmx  login.htmx
templates/components/: active_sessions.htmx  active_users.htmx  logs.htmx  overview.htmx  stats.htmx  table.htmx
tests/: README.md  api_tests.rs  verify_ws.js
