[package]
name = "counter"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15"
axum = { version = "0.8.8", features = ["ws"] }
base64 = "0.22.1"
chrono = "0.4.42"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.37.2"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
