[package]
name = "counter"
version = "0.1.0"
edition = "2024"
default-run = "counter"

[dependencies]
askama = "0.15"
axum = { version = "0.8.8", features = ["ws"] }
axum-extra = { version = "0.12.5", features = ["cookie", "cookie-private", "cookie-signed", "query"] }
base64 = "0.22.1"
chrono = "0.4.42"
dotenvy = "0.15.7"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["json", "rustls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.37.2"
time = { version = "0.3.44", features = ["serde"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }

[dev-dependencies]
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots", "connect"], default-features = false }
url = "2.5.8"
